# AIOD-rest-api

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.dev.yaml  docker-compose.yaml  mkdocs.yaml  prometheus.yml  pyproject.toml
.github/: dependabot.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: dockerized-tests.yml  docs.yml  pytest-tests.yml
authentication/: realm-export.json  run_keycloak.sh
authentication/import/: aiod-realm.json  aiod-users-0.json
connectors/: fill-examples.sh
connectors/aibuilder/: Dockerfile
connectors/openml/: Dockerfile
connectors/zenodo/: Dockerfile
data/taxonomies/: default.json
deletion/: Dockerfile
docs/: README.md  Using.md  contributing.md
docs/developer/: authentication.md  connectors.md  elastic_search.md  index.md  releases.md  scripts.md  troubleshooting.md  users.md
docs/hosting/: authentication.md  connectors.md  index.md  metrics.md  proxy.md  synchronization.md
docs/media/: GetDatasetUML.drawio  upload_and_review.drawio
docs/stylesheets/: extra.css
docs/using/: index.md  migration-v1-v2.md  upload.md
generate_json_schema/: .gitignore  README.md  aiod_model.json  analysis.ipynb  compare.py  generate_schema.ipynb  generate_schema_no_inheritance.ipynb  schema_inspector.py  taxonomies_with_definitions.json
generate_json_schema/comparision_results/: extra_entities.csv  extra_properties.csv  missing_entities.csv  missing_properties.csv
generate_json_schema/comparision_results_noinheritance/: extra_entities.csv  extra_properties.csv  missing_entities.csv  missing_properties.csv
generate_json_schema/conceptual_model/: model-export.json  ontology_data_with_inheritance.json  taxonomies_with_definitions.json
grafana/dashboards/: AIOD-API-Metrics.json
scripts/: README.md  backup.sh  build.sh  clean.sh  migrate_hf.py  mysql_dump.sh  mysql_restore.sh  realm_export.sh  restore.sh  set_alembic.sh  up.sh
src/: authentication.py  config.default.toml  config.py  main.py  setup_logger.py  triggers.py  versioning.py  versions.toml
(+307 files in other folders)
