[project]
name = "aiod_metadata_catalogue"
description = "A Metadata Catalogue for AI on Demand "
version = "1.5.20250709"
requires-python = ">=3.11"
authors = [
    { name = "Adrián Alcolea" },
    { name = "Antonis Ganios" },
    { name = "Giannis Mouchakis" },
    { name = "Íñigo Aréjula Aísa" },
    { name = "Jean Matias" },
    { name = "Jos van der Velde", email = "j.d.v.d.velde@tue.nl" },
    { name = "Pieter Gijsbers", email = "p.gijsbers@tue.nl"},
    { name = "Taniya Das", email = "t.das@tue.nl" }
]
dependencies = [
    "urllib3== 2.2.3",
    "bibtexparser==1.4.1",
    "huggingface_hub==0.28.1",
    "fastapi==0.115.6",
    "uvicorn==0.25.0",
    "requests==2.32.3",
    "mysqlclient==2.2.4",
    "oic==1.6.0",
    "python-keycloak==3.7.0",
    "pydantic<2",
    "python-dotenv==1.0.1",
    "pytz==2024.2",
    "python-dateutil==2.9.0.post0",
    "ratelimit==2.2.1",
    "sqlmodel==0.0.22",
    "typing_inspect==0.9.0",
    "httpx==0.28.1",
    "sickle==0.7.0",
    "xmltodict==0.14.2",
    "python-multipart==0.0.19",
    "mysql-connector-python==9.1.0",
    "elasticsearch==8.16.0",
    "jinja2==3.1.4",
]
readme = "README.md"

[project.optional-dependencies]
dev = [
    "types-python-dateutil==2.9.0.20240316",
    "pytest==8.3.2",
    "pytest-asyncio==0.24.0",
    "pytest-dotenv==0.5.2",
    "pytest-xdist==3.6.1",
    "pre-commit==4.0.1",
    "responses==0.25.3",
    "freezegun==1.5.1",
]
docs = [
    "mkdocs-material",
    "mkdocs-section-index",
    "mkdocs-git-revision-date-localized-plugin",
]

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 100
exclude = [
    "src/tests",
]

[tool.codespell]
ignore-words-list = "checkin"

[tool.ruff.lint]
select = ["S"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::FutureWarning"
]
env_override_existing_values = 1
env_files = [
    "src/.env",
    "src/tests/.env",
    ".env",  # Only used if running from docker container
    "tests/.env"  # Only used if running from docker container
]
